# solid-backend

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.rst  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  test_settings.py
.github/workflows/: build-pr.yml
config/: urls.py
config/settings/: common.py
content/: serializers.py
docker/local/: Dockerfile.web  entrypoint.sh
glossary/: models.py
photograph/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
photograph/migrations/: 0001_implement_photograph_model.py  0002_change_help_text.py
photograph/tests/: test_base_models.py
sample_project/: README.rst
sample_project/api_docs/: api_docs.py
sample_project/sample_content/: admin.py  apps.py  models.py  serializers.py
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
solid_backend/: __init__.py  urls.py
solid_backend/contact/: apps.py  urls.py  views.py
solid_backend/content/: apps.py  fields.py  models.py  serializers.py  urls.py  views.py
solid_backend/glossary/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
solid_backend/media_object/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
solid_backend/message/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
solid_backend/openzoom/: deepzoom.py
solid_backend/photograph/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
solid_backend/quiz/: admin.py  apps.py  forms.py  models.py  urls.py  (+2 more)
(+85 files in other folders)
